--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "jquery": "^3.6.0",
     "scroll-lock": "^2.1.5",
     "scrollreveal": "^4.0.9",
-    "smooth-scroll": "^16.1.3"
+    "smooth-scroll": "^16.1.3",
+    "swiper": "^11.1.1"
   }
 }
