--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
   "dependencies": {
     "gsap": "^3.9.1",
     "jquery": "^3.6.0",
+    "jquery-ui": "^1.13.3",
     "lightgallery": "^2.7.2",
     "scroll-lock": "^2.1.5",
     "scrollreveal": "^4.0.9",
