--- a/package.json
+++ b/package.json
@@ -82,7 +82,9 @@
     "gsap": "^3.9.1",
     "jquery": "^3.6.0",
     "jquery-ui": "^1.13.3",
+    "jquery-ui-touch-punch": "^0.2.3",
     "lightgallery": "^2.7.2",
+    "nouislider": "^15.8.0",
     "scroll-lock": "^2.1.5",
     "scrollreveal": "^4.0.9",
     "smooth-scroll": "^16.1.3",
