--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/bundle.js",
   "license": "MIT",
   "scripts": {
-    "build": "rimraf build && webpack --env mode=development --config ./webpack.config.js --progress && node ./node_scripts/sitemap-update && node ./node_scripts/not-found-page-update && rimraf ./build/404",
+    "build": "rimraf build && webpack --env mode=production --config ./webpack.config.js --progress && node ./node_scripts/sitemap-update && node ./node_scripts/not-found-page-update && rimraf ./build/404",
     "develop": "webpack serve --env mode=development --config ./webpack.config.js --progress",
     "dev": "yarn develop",
     "lint:editorconfig": "yarn editorconfig-checker",
